--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "react-virtuoso": "^4.7.11",
