--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.8.1",
     "react-virtuoso": "^4.7.11",
     "web-vitals": "^2.1.4"
   },
